# panda3d-tutorial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.cfg
src/tutorial/: __init__.py  main.py
tests/: test_dummy.py
