[metadata]
name = tutorial
version = attr:tutorial.__version__
description = panda3d tutorial game
long_description = file: README.md, CHANGELOG.md

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.9
install_requires =
    panda3d

[options.packages.find]
where=src


[flake8]
extend-ignore = E501, W503
extend-select = B9
# line length is intentionally set to 80 here because black uses Bugbear
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length for more details
max-line-length = 80
max-complexity = 18
